# deep-earth-harmonizer

./: .coverage  .gitignore  .mcp.json  CLAUDE.md  README.md  deep_polish_pass.md  final_houdini_ir.md  houdini_hda_spec.md  man.py  man_test.py  mt.py  planet_embeddings.json  planet_embeddings.json.template  planet_embeddings_v3.md  production_spec.md  pyproject.toml  verify_manual.py  verify_osm_integration.py  verify_osm_rasterization.py
.github/workflows/: ci.yml
conductor/: product-guidelines.md  product.md  setup_state.json  tech-stack.md  tracks.md
conductor/archive/foundation_20251228/: metadata.json  plan.md  spec.md
conductor/archive/osm_provider_20260104/: plan.md
conductor/archive/phase3-features_20260110/: plan.md  spec.md
conductor/archive/phase4-polish_20260111/: plan.md  spec.md
conductor/tracks/foundation_20251228/: plan.md
conductor/tracks/osm_provider_20260104/: metadata.json  plan.md  spec.md
conductor/tracks/phase2-stability/: plan.md  spec.md
conductor/tracks/phase3-features/: plan.md
conductor/tracks/phase4-polish/: plan.md
conductor/tracks/phase5-hardening/: plan.md  spec.md
conductor/tracks/phase6-advanced-houdini/: plan.md  spec.md
deep_earth.egg-info/: SOURCES.txt
docs/: CREDENTIALS.md  INSTALL.md  QUICKSTART.md  new_additons.md
hda_ir/: deep_earth_harmonizer.json
otls/: sop_mk.pv.deep_earth.1.1.hdalc
otls/backup/: sop_mk.pv.deep_earth.1.0_bak1.hdalc  sop_mk.pv.deep_earth.1.0_bak10.hdalc  sop_mk.pv.deep_earth.1.0_bak11.hdalc  sop_mk.pv.deep_earth.1.0_bak12.hdalc  sop_mk.pv.deep_earth.1.0_bak13.hdalc  sop_mk.pv.deep_earth.1.0_bak14.hdalc  sop_mk.pv.deep_earth.1.0_bak15.hdalc  sop_mk.pv.deep_earth.1.0_bak16.hdalc  sop_mk.pv.deep_earth.1.0_bak17.hdalc  sop_mk.pv.deep_earth.1.0_bak18.hdalc  sop_mk.pv.deep_earth.1.0_bak19.hdalc  sop_mk.pv.deep_earth.1.0_bak2.hdalc  sop_mk.pv.deep_earth.1.0_bak20.hdalc  sop_mk.pv.deep_earth.1.0_bak21.hdalc  sop_mk.pv.deep_earth.1.0_bak22.hdalc  sop_mk.pv.deep_earth.1.0_bak23.hdalc  sop_mk.pv.deep_earth.1.0_bak24.hdalc  sop_mk.pv.deep_earth.1.0_bak25.hdalc  sop_mk.pv.deep_earth.1.0_bak26.hdalc  sop_mk.pv.deep_earth.1.0_bak27.hdalc  sop_mk.pv.deep_earth.1.0_bak28.hdalc  sop_mk.pv.deep_earth.1.0_bak29.hdalc  sop_mk.pv.deep_earth.1.0_bak3.hdalc  sop_mk.pv.deep_earth.1.0_bak30.hdalc  sop_mk.pv.deep_earth.1.0_bak31.hdalc  sop_mk.pv.deep_earth.1.0_bak32.hdalc  sop_mk.pv.deep_earth.1.0_bak33.hdalc  sop_mk.pv.deep_earth.1.0_bak34.hdalc  sop_mk.pv.deep_earth.1.0_bak35.hdalc  sop_mk.pv.deep_earth.1.0_bak36.hdalc  sop_mk.pv.deep_earth.1.0_bak37.hdalc  sop_mk.pv.deep_earth.1.0_bak4.hdalc  sop_mk.pv.deep_earth.1.0_bak5.hdalc  sop_mk.pv.deep_earth.1.0_bak6.hdalc  sop_mk.pv.deep_earth.1.0_bak7.hdalc  sop_mk.pv.deep_earth.1.0_bak8.hdalc  sop_mk.pv.deep_earth.1.0_bak9.hdalc
python/deep_earth/: __main__.py  async_utils.py  cache.py  cli.py  config.py  coordinates.py  credentials.json  credentials.py  deepearth-482704-f3be1bebcfe5.json  harmonize.py  logging_config.py  preview.py  region.py  retry.py  setup_wizard.py  terrain_analysis.py
python/deep_earth.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: deep_earth_pdg_tile.py  deep_earth_setup.py  hda_fetch.py
spec_2/: new_additons.md
tests/: conftest.py  test_async_utils.py  test_cache.py  test_cli.py  test_config.py  test_coordinates.py  test_credentials.py  test_earth_engine.py  test_ee_batch_paths.py  test_ee_error_paths.py  test_ee_logging.py  test_harmonize.py  test_harmonize_integration.py  test_houdini_geometry.py  test_houdini_geometry_injection.py  test_houdini_visualization.py  test_local.py  test_logging.py  test_osm.py  test_osm_integration.py  test_osm_logging.py  test_package.py  test_preview.py  test_providers_base.py  test_region.py  test_retry.py  test_setup_wizard.py  test_srtm.py  test_srtm_logging.py  test_terrain_analysis.py
venv_houdini/: pyvenv.cfg
(+8 files in other folders)
