[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deep_earth"
version = "0.1.0"
description = "Multi-modal geospatial data synthesizer for Houdini"
requires-python = ">=3.9"
dependencies = [
    "earthengine-api>=0.1.370",
    "pyproj>=3.4",
    "shapely>=2.0",
    "rasterio>=1.3",
    "numpy>=1.24",
    "aiohttp>=3.8",
    "scikit-learn>=1.2",
    "scipy>=1.10",
    "tenacity>=8.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0",
]

[tool.setuptools.packages.find]
where = ["python"]