[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deep_earth"
version = "0.2.0"
description = "Multi-modal geospatial data synthesizer for Houdini"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Deep Earth Team" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "earthengine-api==0.1.370",
    "google-cloud-storage==2.10.0",
    "pyproj==3.4.1",
    "shapely==2.0.1",
    "rasterio==1.3.6",
    "numpy==1.24.2",
    "aiohttp==3.8.4",
    "scikit-learn==1.2.2",
    "scipy==1.10.1",
    "tenacity==8.2.2",
]

[project.optional-dependencies]
preview = [
    "matplotlib>=3.6",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0",
]

[project.scripts]
deep-earth = "deep_earth.cli:main"

[project.urls]
Homepage = "https://github.com/deep-earth/deep-earth-harmonizer"
Documentation = "https://github.com/deep-earth/deep-earth-harmonizer#readme"
Repository = "https://github.com/deep-earth/deep-earth-harmonizer"

[tool.setuptools.packages.find]
where = ["python"]

[tool.mypy]
mypy_path = "python"
packages = ["deep_earth"]
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
pythonpath = ["python"]
asyncio_mode = "auto"
testpaths = ["tests"]